--- a/packages/toolbox/src/components/__style__/button.css
+++ b/packages/toolbox/src/components/__style__/button.css
@@ -66,7 +66,7 @@
         z-index: 0;
     }
 
-    & > span:not([data-react-toolbox="tooltip"]) {
+    & > span {
         display: inline-block;
         line-height: var(--button-height);
         vertical-align: middle;
@@ -127,7 +127,7 @@
     height: var(--button-floating-height);
     width: var(--button-floating-height);
 
-    & .icon:not([data-react-toolbox="tooltip"]) {
+    & .icon {
         line-height: var(--button-floating-height);
     }
 
