--- a/packages/toolbox/src/components/__style__/icon-button.css
+++ b/packages/toolbox/src/components/__style__/icon-button.css
@@ -44,7 +44,7 @@
         z-index: 0;
     }
 
-    & > span:not([data-react-toolbox="tooltip"]) {
+    & > span {
         display: inline-block;
         line-height: var(--button-height);
         vertical-align: middle;
